# homebase

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  schema.yaml  schema_v2.yaml
.github/workflows/: release.yaml
app/backend/: db.py  main.py  schema.py
app/static/: style.css
app/templates/: base.html  entity_detail.html  entity_form.html  entity_list.html  search_results.html
app/tests/: test_schema.py
src/homebase/: __main__.py
src/homebase/cli/: __init__.py  cli.py
src/homebase/core/: config.py  db.py  document_schema.py  schema.py
src/homebase/server/: api.py  docs.py  helpers.py  inventory.py  main.py
src/homebase/server/static/: style.css
src/homebase/server/templates/: _shell.html  base.html  docs_list.html  entity_detail.html  entity_docs.html  entity_form.html  entity_list.html  entity_page.html  search_results.html
src/homebase/server/templates/docs/: add_doc_content.html  content_steps.html  doc_form.html  doc_page.html
src/homebase/server/templates/parts/: entity_badge.html
tests/: test_schema.py
