[project]
name = "homelab_docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyyaml>=6.0.3",
    "tinydb>=4.8.2",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = ["mypy>=2.1.0", "pytest>=8", "types-pyyaml>=6.0.12.20260518"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-ra --strict-markers"
