[project]
name = "homebase-server"
version = "0.0.2-alpha"
description = "Asset management and documentation for your homelab"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyyaml>=6.0.3",
    "tinydb>=4.8.2",
    "jinja2>=3.1.6",
    "typer>=0.24",
    "rich>=15",
]

[dependency-groups]
dev = ["mypy>=2.1.0", "pytest>=8", "types-pyyaml>=6.0.12.20260518"]

[project.scripts]
homebase = "homebase.cli:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-ra --strict-markers"

[tool.uv.build-backend]
module-name = "homebase"
